# practice

./: .gitignore  log
algorithm/: Makefile
assembly/gnu_assembler/: base  callmaxofthree.c  fill  fill.S  fill.h  like  like.S  like.c  like1.S  main  main.c
awk/: employee
bash/etc/: error  func.sh  local_var.sh  open.sh  state  test.sh  test12.sh  test13.sh  test15.sh  test19.sh  test22.sh  test3.sh  test8.sh
bash/example.4-5/: do-v0.sh
bash/test.0/: do-v1.sh  do-v4.sh
bash/test4/: test4.sh
bash/test5/: test5b.sh
build-cmake/add_custom_target/: CMakeCache.txt  Makefile
build-cmake/basic/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.c
build-cmake/foreach/: CMakeCache.txt  Makefile  (+1 more)
build-make/: Makefile
c/: .define.c.swp  build-arm.sh  build-env.sh  output
c++/: Makefile  build-arm.sh  build.sh
c/inc/: ptr.h  (+1 more)
cmake/add_custom_command/: CMakeCache.txt  CMakeLists.txt
cmake/basic/: CMakeLists.txt  foo.c
gawk/: data2  data2.txt  isphone.gawk
kernel-driver/: lab_char.c  lab_char.h
kernel-module/: .basic.ko.cmd  .basic.mod.o.cmd  .basic.o.cmd  basic.c  basic.ko  modules.order
note/: Makefile  lib.c  main  note.txt
perl/: hello.pl
sed/: data1.txt  test.txt
shell/: .text.swp  1.sh  3.sh  func.sh  regular-expression  sys_info_pash.html  sys_info_pash.sh  text
shell-bash/: do.sh
stream-editor-gawk/: ;g a  ;p a  a  data  data1.txt  data3  script.gawk  script4.gawk
stream-editor-sed/: data.txt  data2.txt  data2_1.txt  data2_2.txt  data5.txt  dir.sh  stream.txt
system-library/: Makefile
user-library/: build-arm.sh
(+8054 files in other folders)
